--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,3 @@
-#[options.entry_points]
-#console_scripts =
-#    tempr = 
+[options.entry_points]
+console_scripts =
+   tempres = tempres.main:main_func
