setup tools related changes

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,5 @@
 [options.entry_points]
 console_scripts =
-   tempres = tempres.main:main_func
+    tempres = tempres.main:main_func
+    tempresdb = tempres.maindb:main_func
+    
