added mathplot support with cmd-line tempresplt

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,5 @@
 console_scripts =
     tempres = tempres.main:main_func
     tempresdb = tempres.maindb:main_func
+    tempresplt = tempres.mainplt:main_func
     
