--- a/setup.cfg
+++ b/setup.cfg
@@ -3,4 +3,5 @@ console_scripts =
     tempres = tempres.main:main_func
     tempresdb = tempres.maindb:main_func
     tempresplt = tempres.mainplt:main_func
+    tempresplt = tempres.mainpub:main_func
     
