--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,32 @@ console_scripts =
     tempresplt = tempres.mainplt:main_func
     temprespub = tempres.mainpub:main_func
     
+ 
+[metadata]
+keywords = micropython esp32 esp8266 modcore home-automation
+description = collect temperature and pressure data from a mpy-modcore device
+
+long_description = file: README.md, CHANGELOG.md, BACKLOG.md
+long_description_content_type = text/markdown
+
+license = AGPLv3+
+classifiers =
+    Development Status :: 3 - Alpha
+    Operating System :: POSIX :: Linux
+    Operating System :: OS Independent
+    Environment :: Console
+    Intended Audience :: Developers
+    Intended Audience :: Information Technology
+    Topic :: Software Development :: Embedded Systems
+    Topic :: Utilities
+    Topic :: Home Automation
+    Topic :: Software Development :: Libraries :: Python Modules
+    Programming Language :: Python :: Implementation :: MicroPython
+    Programming Language :: Python :: 3
+    License :: Free For Home Use
+    License :: Free for non-commercial use
+    License :: Free To Use But Restricted
+    License :: Other/Proprietary License
+    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
+
+    
