refactored const and setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ description = collect temperature and pressure data from a mpy-modcore device
 long_description = file: README.md, CHANGELOG.md, BACKLOG.md
 long_description_content_type = text/markdown
 
-license = AGPLv3+
+license = other / AGPLv3+
 classifiers =
     Development Status :: 3 - Alpha
     Operating System :: POSIX :: Linux
